update for class material

--- a/2021-03-04-Files/01-Ins_Preprocessing/Solved/ChicagoMarathonPreprocessing.ipynb
+++ b/2021-03-04-Files/01-Ins_Preprocessing/Solved/ChicagoMarathonPreprocessing.ipynb
@@ -2590,7 +2590,8 @@
     "X['division'] = LabelEncoder().fit_transform(X['division'])\n",
     "X['country'] = LabelEncoder().fit_transform(X['country'])\n",
     "X = X.dropna()\n",
-    "X.head()"
+    "X.head()\n",
+    "#should use get dummies instead of labelencoder as data is not ordinal... division never classified in ordinal sense"
    ]
   },
   {
@@ -2637,7 +2638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
